--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(8)</span></div><div class="category" data-category="COVID-19">COVID-19 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="data exploration">data exploration <span class="quarto-category-count">(1)</span></div><div class="category" data-category="data wrangling">data wrangling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="forecasting">forecasting <span class="quarto-category-count">(1)</span></div><div class="category" data-category="vaccinations">vaccinations <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(9)</span></div><div class="category" data-category="COVID-19">COVID-19 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="data exploration">data exploration <span class="quarto-category-count">(1)</span></div><div class="category" data-category="data wrangling">data wrangling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="forecasting">forecasting <span class="quarto-category-count">(1)</span></div><div class="category" data-category="vaccinations">vaccinations <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -153,7 +153,35 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1688688000000" data-listing-file-modified-sort="1697033952341" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="19">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1696982400000" data-listing-file-modified-sort="1697105400321" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="25">
+<div class="thumbnail">
+<p><a href="./stories/2023-02-01-Overwatch-League/OWL_story.html"> <img src="./stories/2023-02-01-Overwatch-League/preview.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./stories/2023-02-01-Overwatch-League/OWL_story.html">
+<h3 class="no-anchor listing-title">
+Esport predictions: Overwatch League
+</h3>
+<div class="listing-subtitle">
+
+</div>
+<div class="listing-description">
+<p>We study a single season of games in the professional esports league for Overwatch and try to predict game outcomes based on past performance.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./stories/2023-02-01-Overwatch-League/OWL_story.html">
+<div class="listing-date">
+Oct 11, 2023
+</div>
+<div class="listing-author">
+Markus Hauru, Tim Powell, Kevin Xu
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1688688000000" data-listing-file-modified-sort="1697105400313" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="19">
 <div class="thumbnail">
 <p><a href="./stories/2022-10-06-Boris-Bikes/2023-07-07-Boris-Bikes.html"> <img src="./stories/2022-10-06-Boris-Bikes/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -181,7 +209,7 @@ James Bishop, Markus Hauru, Federico Nanni, Camila Rangel Smith
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1665705600000" data-listing-file-modified-sort="1697033952293" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="56">
+<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1665705600000" data-listing-file-modified-sort="1697105400265" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="56">
 <div class="thumbnail">
 <p><a href="./stories/2022-03-27_Glass_ML/2022-10-14-Glass-ML-20th-Century.html"> <img src="./stories/2022-03-27_Glass_ML/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -209,7 +237,7 @@ Joe Cerniglia
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-date-sort="1646784000000" data-listing-file-modified-sort="1697033952285" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="21">
+<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1646784000000" data-listing-file-modified-sort="1697105400253" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="21">
 <div class="thumbnail">
 <p><a href="./stories/2022-03-09-Desert-Island-Discs/2022-03-09-Desert-Island-Discs.html"> <img src="./stories/2022-03-09-Desert-Island-Discs/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -237,7 +265,7 @@ Helen Duncan, Bill Finnegan, Luke Hare, Camila Rangel Smith, Sam Van Stroud
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1635897600000" data-listing-file-modified-sort="1697033952277" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="17">
+<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1635897600000" data-listing-file-modified-sort="1697105400249" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="17">
 <div class="thumbnail">
 <p><a href="./stories/2021-11-03-Vaccine_Efficacy/2021-11-03-vaccine-Efficacy.html"> <img src="./stories/2021-11-03-Vaccine_Efficacy/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -265,7 +293,7 @@ Eric Daub
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-listing-date-sort="1626825600000" data-listing-file-modified-sort="1697033951885" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30">
+<div class="quarto-post image-right" data-index="5" data-listing-date-sort="1626825600000" data-listing-file-modified-sort="1697105399809" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30">
 <div class="thumbnail">
 <p><a href="./stories/2021-07-21-Baseball-Replacement-Level/2021-07-21-Baseball-Replacement-Level.html"> <img src="./stories/2021-07-21-Baseball-Replacement-Level/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -293,7 +321,7 @@ Eric Daub
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="COVID-19,vaccinations,forecasting" data-listing-date-sort="1621382400000" data-listing-file-modified-sort="1697033951881" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30">
+<div class="quarto-post image-right" data-index="6" data-categories="COVID-19,vaccinations,forecasting" data-listing-date-sort="1621382400000" data-listing-file-modified-sort="1697105399809" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30">
 <div class="thumbnail">
 <p><a href="./stories/2021-05-28-COVID-Vaccination-Forecasting/2021-05-19-COVID-19-Vaccine-Forecasting.html"> <img src="./stories/2021-05-28-COVID-Vaccination-Forecasting/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -334,7 +362,7 @@ Jack Roberts
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-listing-date-sort="1614297600000" data-listing-file-modified-sort="1697033951873" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="24">
+<div class="quarto-post image-right" data-index="7" data-listing-date-sort="1614297600000" data-listing-file-modified-sort="1697105399797" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="24">
 <div class="thumbnail">
 <p><a href="./stories/2021-02-26-US-election/2021-02-26-Modelling-Mail-In-Votes-In-the-2020-US-Election.html"> <img src="./stories/2021-02-26-US-election/preview.png" class="thumbnail-image"> </a></p>
 </div>
@@ -362,7 +390,7 @@ Eric Daub
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-categories="COVID-19,data wrangling,data exploration" data-listing-date-sort="1605830400000" data-listing-file-modified-sort="1697033951589" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="19">
+<div class="quarto-post image-right" data-index="8" data-categories="COVID-19,data wrangling,data exploration" data-listing-date-sort="1605830400000" data-listing-file-modified-sort="1697105399489" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="19">
 <div class="thumbnail">
 <p><a href="./stories/2020-11-20-COVID-19/2020-11-20-Who_was_protected_by_the_first_COVID-19_lockdown.html"> <img src="./stories/2020-11-20-COVID-19/preview.png" class="thumbnail-image"> </a></p>
 </div>
